# DaisyAI-Workspace

./: Makefile  README.md  pyproject.toml
Desktop/DaisyAI-Workspace/: .gitignore  DaisyAI Workspace - Final Directory Structure.md  MASTER_ARCHITECTURE.md  MASTER_PLAN.md  PHASE_EXECUTION _TRACKER.md  PHASE_TRACKER.md  PROJECT_STATUS.md  VERTEXAI API.md
Desktop/DaisyAI-Workspace/VEREX AI API Documents/: Install the Vertex AI SDK for Python  _  Google Cloud.html  Package aiplatform (1.97.0)  _  Python client library  _  Google Cloud.html
Desktop/DaisyAI-Workspace/daisy-knowledge/: Dockerfile  README.md  pyproject.toml  requirements.txt
Desktop/DaisyAI-Workspace/daisy-maestro/: Makefile  README.md  pyproject.toml  requirements.txt
Desktop/DaisyAI-Workspace/daisy_knowledge/: Makefile  README.md  (+1 more)
Desktop/DaisyPipelineValidation/daisy-knowledge/: Makefile  README.md  pyproject.toml
Desktop/DaisyPipelineValidation/daisy-knowledge/app/: __init__.py  agent.py
Desktop/DaisyPipelineValidation/daisy-knowledge/deployment/terraform/: backend.tf  cicd_variables.tf  github.tf
Desktop/DaisyPipelineValidation/daisy-knowledge/deployment/terraform/dev/: backend.tf
Desktop/DaisyPipelineValidation/daisy-knowledge/deployment/terraform/vars/: env.tfvars
app/: server.py
app/utils/: typing.py
data_ingestion/data_ingestion_pipeline/: pipeline.py
deployment/cd/: deploy-to-prod.yaml  staging.yaml
deployment/terraform/: backend.tf  build_triggers.tf  iam.tf  service_accounts.tf  storage.tf  variables.tf
tests/integration/: test_server_e2e.py
tests/load_test/: load_test.py
(+154 files in other folders)
